--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Allen C",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   }
